--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -84,12 +84,6 @@
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399569">전라남도 구례군 산동면 둔사리 산185</a></p>
       <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 고지대 이나 산 전체에서 저지대 (임 8600평)</p>
-      <img class="nw-100--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/1.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/2.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
-      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
-      <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
-      <p></p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/3.png" alt="null">
@@ -158,6 +152,12 @@
       <img class="nw-32--a" src="image/05-전남/05-순천/전라남도 순천시 주암면 운룡리 산311/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1401668">전라남도 순천시 주암면 운룡리 산311</a></p>
       <p>진입로 없음. 진입 불가 (임 12000평)</p>
+      <img class="nw-100--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/1.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/2.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/3.png" alt="null">
+      <img class="nw-32--a" src="image/05-전남/30-담양/전라남도 담양군 무정면 동산리 산20/4.png" alt="null">
+      <p><a href="https://www.my-auction.co.kr/view/1380697">전라남도 담양군 무정면 동산리 산20</a></p>
+      <p>진입로 없음. 진입 불가 (임 15000평)</p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 돌산읍 우두리 산41-1/3.png" alt="null">
