--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -23,103 +23,103 @@
       <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/3.png" alt="null">
       <img class="nw-32--a" src="image/01-경기/07-여주/경기도 여주시 금사면 도곡리 530-31/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1407855">경기도 여주시 금사면 도곡리 530-31</a></p>
-      <p>매물은 좋음. 도로보다 저지대 (임 200평)</p>
+      <p>매물은 좋음. 도로보다 저지대 (임 200평) == 3회차 2900</p>
       <img class="nw-100--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/1.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/2.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/25-평창/강원특별자치도 평창군 미탄면 한탄리 442-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1412459">강원특별자치도 평창군 미탄면 한탄리 442-3</a></p>
-      <p>매물은 좋음. 도로보다 저지대 (임 240평)</p>
+      <p>매물은 좋음. 도로보다 저지대 (임 240평) == 3회차 1000</p>
       <img class="nw-100--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/1.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/2.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/3.png" alt="null">
       <img class="nw-32--a" src="image/02-강원/30-정선/강원특별자치도 정선군 화암면 화암리 452-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1398286">강원특별자치도 정선군 화암면 화암리 452-2</a></p>
-      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함 (대 280평)</p>
+      <p>매물 자체는 양호하나 가격이 조금 있고 경계가 이상함 (대 280평) == 5회차 5600</p>
       <img class="nw-100--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/10-예천/경상북도 예천군 풍양면 오지리 235-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1400351">경상북도 예천군 풍양면 오지리 235-3</a></p>
-      <p>대체로 양호하나 진입로가 좁음 (임 270평)</p>
+      <p>대체로 양호하나 진입로가 좁음 (임 270평) == 5회차 970</p>
       <img class="nw-100--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1426679">경상북도 경주시 산내면 내일리 산448-3</a></p>
-      <p>매물은 좋음. 도로보다 고지대 (임 470평)</p>
+      <p>매물은 좋음. 도로보다 고지대 (임 470평) == 1회차 4400</p>
       <img class="nw-100--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1271437">경상북도 청도군 청도읍 사촌리 34-1</a></p>
-      <p>매물은 양호하나 앞집에 큰 개가 있고 트러블이 있을 가능성 높음 (임 220평)</p>
+      <p>매물은 양호하나 앞집에 큰 개가 있고 트러블이 있을 가능성 높음 (임 220평) == 7회차 2600</p>
       <img class="nw-100--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/25-창원/경상남도 창원시 마산합포구 진전면 여양리 산248-2/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1406591">경상남도 창원시 마산합포구 진전면 여양리 산248-2</a></p>
-      <p>매물은 좋은데 접도구역이라 아무것도 못 할 가능성 있음 (임 240평)</p>
+      <p>매물은 좋은데 접도구역이라 아무것도 못 할 가능성 있음 (임 240평) == 4회차 1800</p>
       <img class="nw-100--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/30-고성/경상남도 고성군 상리면 망림리 1002/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1364117">경상남도 고성군 상리면 망림리 1002</a></p>
-      <p>위치는 양호 하나 토지 모양이 이상함 (대 280평)</p>
+      <p>위치는 양호 하나 토지 모양이 이상함 (대 280평) == 9회차 1500</p>
       <img class="nw-100--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/1.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/2.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
-      <p>매물 상태가 뭔가 하기 애매함 (대 240평)</p>
+      <p>매물 상태가 뭔가 하기 애매함 (대 240평) == 2회차 3400</p>
       <img class="nw-100--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399569">전라남도 구례군 산동면 둔사리 산185</a></p>
-      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 고지대 이나 산 전체에서 저지대 (임 8600평)</p>
+      <p>매물은 좋음. 절 가는 길에 위치함. 도로보다 고지대 이나 산 전체에서 저지대 (임 8600평) == 4회차 3400</p>
       <img class="nw-100--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/02-여수/전라남도 여수시 소라면 복산리 산123-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1420528">전라남도 여수시 소라면 복산리 산123-1</a></p>
-      <p>매물은 좋음 (임 870평)</p>
+      <p>매물은 좋음 (임 870평) == 2회차 4500</p>
       <img class="nw-100--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1425679">전라남도 장흥군 용산면 접정리 391</a></p>
-      <p>매물은 좋지만 주거지역내 (대 400평중 건65평)</p>
+      <p>매물은 좋지만 주거지역내 (대 400평중 건65평) == 1회차 6000</p>
       <img class="nw-100--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1416202">전라남도 해남군 마산면 장촌리 581</a></p>
-      <p>매물은 좋지만 진입로가 너무 좁음 (대 800평)</p>
+      <p>매물은 좋지만 진입로가 너무 좁음 (대 260평) == 2회차 1400</p>
       <img class="nw-100--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1410596">전라남도 무안군 청계면 송현리 산21</a></p>
-      <p>매물은 좋지만 근처에 축사가 너무 많음 (임 800평)</p>
+      <p>매물은 좋지만 근처에 축사가 너무 많음 (임 800평)== 3회차 1500</p>
       <img class="nw-100--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/1.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/2.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/21-김제/전북특별자치도 김제시 공덕면 제말리 190-1/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1399630">전북특별자치도 김제시 공덕면 제말리 190-1</a></p>
-      <p>대체로 양호 하지만 진입로가 난해함 (대 250평)</p>
+      <p>대체로 양호 하지만 진입로가 난해함 (대 250평) == 4회차 1700</p>
       <img class="nw-100--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/1.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/2.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1403516">전북특별자치도 진안군 성수면 용포리 산104-6</a></p>
-      <p>매물은 좋음 (임 2100평)</p>
+      <p>매물은 좋음 (임 2100평) == 3회차 1400</p>
       <img class="nw-100--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/1.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/2.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/3.png" alt="null">
       <img class="nw-32--a" src="image/08-충남/20-서산/충청남도 서산시 지곡면 대요리 680-7/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1405821">충청남도 서산시 지곡면 대요리 680-7</a></p>
-      <p>매물은 좋음 (임 480평)</p>
+      <p>매물은 좋음 (임 480평) == 4회차 2800</p>
       <!--
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
