--- a/ko/link/real-estate/index.html
+++ b/ko/link/real-estate/index.html
@@ -59,7 +59,7 @@
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/3.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/30-경주/경상북도 경주시 산내면 내일리 산448-3/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1426679">경상북도 경주시 산내면 내일리 산448-3</a></p>
-      <p>매물은 좋음. 도로보다 고지대 (임 470평) == 1회차 4400</p>
+      <p>매물은 좋음. 도로보다 고지대 (임 470평) == 2회차 3100</p>
       <img class="nw-100--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/1.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/2.png" alt="null">
       <img class="nw-32--a" src="image/03-경북/40-청도/경상북도 청도군 청도읍 사촌리 34-1/3.png" alt="null">
@@ -83,7 +83,7 @@
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/3.png" alt="null">
       <img class="nw-32--a" src="image/04-경남/35-산청/경상남도 산청군 신등면 율현리 510/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1417842">경상남도 산청군 신등면 율현리 510</a></p>
-      <p>매물 상태가 뭔가 하기 애매함 (대 240평) == 2회차 3400</p>
+      <p>매물 상태가 뭔가 하기 애매함 (대 240평) == 3회차 2700</p>
       <img class="nw-100--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/03-구례/전라남도 구례군 산동면 둔사리 산185/3.png" alt="null">
@@ -101,13 +101,13 @@
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/15-장흥/전라남도 장흥군 용산면 접정리 391/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1425679">전라남도 장흥군 용산면 접정리 391</a></p>
-      <p>매물은 좋지만 주거지역내 (대 400평중 건65평) == 1회차 6000</p>
+      <p>매물은 좋지만 주거지역내 (대 400평중 건65평) == 2회차 4700</p>
       <img class="nw-100--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/3.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/20-해남/전라남도 해남군 마산면 장촌리 581/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1416202">전라남도 해남군 마산면 장촌리 581</a></p>
-      <p>매물은 좋지만 진입로가 너무 좁음 (대 260평) == 2회차 1400</p>
+      <p>매물은 좋지만 진입로가 너무 좁음 (대 260평) == 3회차 1100</p>
       <img class="nw-100--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/1.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/2.png" alt="null">
       <img class="nw-32--a" src="image/05-전남/25-무안/전라남도 무안군 청계면 송현리 산21/3.png" alt="null">
@@ -125,7 +125,7 @@
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/3.png" alt="null">
       <img class="nw-32--a" src="image/07-전북/20-진안/전북특별자치도 진안군 성수면 용포리 산104-6/4.png" alt="null">
       <p><a href="https://www.my-auction.co.kr/view/1403516">전북특별자치도 진안군 성수면 용포리 산104-6</a></p>
-      <p>매물은 좋으나 제한이 있음. 공장설립제한지역, 보전관리지역, 농림지역 (임 2100평) == 3회차 1400</p>
+      <p>매물은 좋으나 제한이 있음. 공장설립제한지역, 보전관리지역, 농림지역 (임 2100평) == 낙찰기일 9.8</p>
       <!--
       <img class="nw-100--a" src="image//1.png" alt="null">
       <img class="nw-32--a" src="image//2.png" alt="null">
